# djano_rest

./: .gitignore  README.md  pyproject.toml
api/: admin.py  serializers.py  views.py
api/management/commands/: bootstrap_data.py
drf_shoestore/: settings.py  urls.py
shoestore/: admin.py  models.py  views.py
shoestore/migrations/: 0001_initial.py
templates/: index.html
